vpc/private_subnets.tf
resource "aws_subnet" "private" {
  count = length(var.private_subnet)

  vpc_id            = aws_vpc.this.id
  cidr_block        = var.private_subnet[count.index]
  availability_zone = data.aws_availability_zones.available.names[count.index]

  tags = {
    Name                                           = "${var.project}-private-sg"
    "kubernetes.io/cluster/${var.project}-cluster" = "shared"
    "kubernetes.io/role/internal-elb"              = 1
  }
}
